# python-project-template

./: .pre-commit-config.yaml  404.html  CNAME  Dockerfile  LICENSE  Makefile  README.md  client.py  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.devcontainer /: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: main.yml  mkdocs_ci.yml
CHANGELOG/: index.html
search/: search_index.json
src/python_project_template/: server.py
tests/: test_awesome.py  test_template.py
tests/core/: test_core.py
